Implemented i18n Updated content

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -12,3 +12,7 @@ search_initial_message: Type something to search..
 search_navigate: to navigate
 search_select: to select
 search_close: to close
+button_labels:
+  startup: Apply (Startup)
+  member: Join (Investor)
+announcement_message: "We've booked a plane to **Web Summit 2024** in **Lisbon**! Fly with us and enjoy great deals on hotel, tickets and side events. Let's network right from the **lift off**."
