--- a/i18n/sk.yaml
+++ b/i18n/sk.yaml
@@ -13,8 +13,8 @@ search_navigate: na navigáciu
 search_select: na výber
 search_close: na zatvorenie
 button_labels:
-  startup: Prihlásiť sa (Startup)
-  member: Pripojiť sa (Investor)
+  startup: Prihlásiť sa <span>(Startup)</span>
+  member: Pripojiť sa <span>(Investor)</span>
   subscribe: Odoberať
 announcement_message: "Zarezervovali sme lietadlo na **Web Summit 2024** v **Lisabone**! Letujte s nami a užívajte si skvelé zľavy na hotely, lístky a vedľajšie podujatia. Spoznajte sa s nami priamo od **štartu**."
 beehiiv_url:
