--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -17,7 +17,14 @@ button_labels:
   member: Join <span>(Investor)</span>
   subscribe: Subscirbe
   investment_process: Investment Process
+  investor_deck: Investor Deck
 announcement_message: "We've booked a plane to **Web Summit 2024** in **Lisbon**! Fly with us and enjoy great deals on hotel, tickets and side events. Let's network right from the **lift off**."
 beehiiv_url:
   default: "https://embeds.beehiiv.com/04babe21-4fa5-4161-acd6-2638316a6a13"
   dark: "https://embeds.beehiiv.com/27541c05-650d-4afc-a803-d7d74cb375d2"
+timer:
+  title: "Upcoming Pitching Event:"
+  days: Days
+  hours: Hours
+  minutes: Minutes
+  seconds: Seconds
