--- a/i18n/sk.yaml
+++ b/i18n/sk.yaml
@@ -16,7 +16,9 @@ button_labels:
   startup: Prihlásiť sa <span>(Startup)</span>
   member: Pripojiť sa <span>(Investor)</span>
   subscribe: Odoberať
-announcement_message: "Zarezervovali sme lietadlo na **Web Summit 2024** v **Lisabone**! Letujte s nami a užívajte si skvelé zľavy na hotely, lístky a vedľajšie podujatia. Spoznajte sa s nami priamo od **štartu**."
+announcement:
+  message: "Zarezervovali sme lietadlo na **Web Summit 2024** v **Lisabone**! Letujte s nami a užívajte si skvelé zľavy na hotely, lístky a vedľajšie podujatia. Spoznajte sa s nami priamo od **štartu**."
+  link: "https://www.pelikan.sk/sk/pobyt/web-summit-lisabon-gluon-syndicate"
 beehiiv_url:
   default: "https://embeds.beehiiv.com/afc88566-4707-413e-944d-e7af9cbf3a07"
   dark: "https://embeds.beehiiv.com/6f392545-b778-43db-b3dc-ba54ce18eb63"
