--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -19,7 +19,9 @@ button_labels:
   investment_process: How We Invest
   investor_deck: Investor Deck
   investment_criteria: Investment Criteria
-announcement_message: "We've booked a plane to **Web Summit 2024** in **Lisbon**! Fly with us and enjoy great deals on hotel, tickets and side events. Let's network right from the **lift off**."
+announcement:
+  message: "Are you an investor, startupist, or tech enthusiast planing to go to Web Summit 2024? **We've booked a plane for you!** Fly with us and enjoy great deals on hotel, tickets and side events."
+  link: "https://www.pelikan.sk/sk/pobyt/web-summit-lisabon-gluon-syndicate"
 beehiiv_url:
   default: "https://embeds.beehiiv.com/04babe21-4fa5-4161-acd6-2638316a6a13"
   dark: "https://embeds.beehiiv.com/27541c05-650d-4afc-a803-d7d74cb375d2"
