added cities to annoucement

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -20,7 +20,7 @@ button_labels:
   investor_deck: Investor Deck
   investment_criteria: Investment Criteria
 announcement:
-  message: "Are you an investor, startupist, or tech enthusiast planing to go to Web Summit 2024? **We've booked a plane for you!** Fly with us and enjoy great deals on hotel, tickets and side events."
+  message: "Are you an investor, startupist, or tech enthusiast planing to go to Web Summit 2024? **We've booked a plane from Prague, Brno, Bratislava and Kosice for you!** Fly with us and enjoy great deals on hotel, tickets and side events."
   link: "https://www.pelikan.sk/sk/pobyt/web-summit-lisabon-gluon-syndicate"
 beehiiv_url:
   default: "https://embeds.beehiiv.com/04babe21-4fa5-4161-acd6-2638316a6a13"
