KB moved to Obsidian, changed submit form Obsidian to Nocodb

--- a/i18n/cs.yaml
+++ b/i18n/cs.yaml
@@ -18,7 +18,7 @@ button_labels:
   subscribe: Odebírat
   investment_process: Jak investujeme
   investor_deck: Prezentace pro investory
-  investment_criteria: Investiční kritéria a podmínky
+  investment_thesis: Investiční kritéria (EN)
   next: Další
   back: Zpět
   submit: Odeslat
