--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -18,7 +18,7 @@ button_labels:
   subscribe: Subscirbe
   investment_process: How We Invest
   investor_deck: Investor Deck
-  investment_criteria: Investment Criteria & Conditions
+  investment_thesis: Our Investment Thesis
   next: Next
   back: Back
   submit: Submit
