--- a/i18n/sk.yaml
+++ b/i18n/sk.yaml
@@ -18,7 +18,7 @@ button_labels:
   subscribe: Odoberať
   investment_process: Ako investujeme
   investor_deck: Prezentácia pre investorov
-  investment_criteria: Investičné kritériá a podmienky
+  investment_thesis: Investičné kritériá (EN)
   next: Ďalej
   back: Späť
   submit: Odoslať
